--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Music Label Name</h1>
+        <h1>Color de Barrio Records</h1>
         <p>Discover Independent Music Excellence</p>
     </header>
     <main>
