--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section>
             <h2>Featured Artists</h2>
             <ul>
-                <li>Artist 1</li>
+                <li>Gottiko "El Supersonico"</li>
                 <li>Artist 2</li>
                 <!-- Add more artists as needed -->
             </ul>
