--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </section>
         <section>
             <h2>Contact Us</h2>
-            <p>For inquiries, please contact us at <a href="mailto:your@email.com">your@email.com</a>.</p>
+            <p>For inquiries, please contact us at <a href="mailto:colordebarriorecords@gmail.com">colordebarriorecords@gmail.com</a>.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Your Music Label. All rights reserved.</p>
+        <p>&copy; 2024 YourColor de Barrio Records Independent Music Label. All rights reserved.</p>
     </footer>
 </body>
 </html>
