--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 YourColor de Barrio Records Independent Music Label. All rights reserved.</p>
+        <p>&copy; 2024 Color de Barrio Records Independent Music Label. All rights reserved.</p>
     </footer>
 </body>
 </html>
